// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginColumnLayout component, with one column, matches the snapshot 1`] = `
.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`The LoginColumnLayout component, with two columns, matches the snapshot 1`] = `
.c9 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  background-color: #64a60a;
  color: #fff;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  -webkit-filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  border-radius: 4px;
  font: 700 14px/24px "Open Sans",sans-serif;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c9:hover,
.c9:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c9:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c8 {
  text-shadow: 0px 0px 2px #000;
}

.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

.c7 {
  margin-left: 48px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

@media screen and ( max-width:1024px ) {
  .c7 {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Password changed successfully!
        </span>
      </h1>
      <button
        className="c8 c9"
        onClick={[Function]}
        type="button"
      >
        <span>
          Continue to MyYoast
        </span>
      </button>
    </div>
  </div>
</div>
`;
